db/query_parsing.py
"""
query_parsing.py - Reference implementation of the SQL query parsing pipeline:
    SQL text  ->  LEXER  ->  tokens
    tokens    ->  PARSER ->  AST   (SelectStmt with target_list, from_clause, ...)
    AST       ->  PLANNER->  logical plan tree  (Scan -> Filter -> Sort -> Project)

This is the single source of truth that QUERY_PARSING.md is built from. Every
token, AST node, and plan node in the guide is printed by this file. If you
change something here, re-run and re-paste the output into the guide.

Run:
    python3 query_parsing.py

============================================================================
THE INTUITION (read this first) - the mailroom sorting office
============================================================================
A SQL string lands like a handwritten letter. Three desks process it in order:

  * DESK 1 - LEXER (the reader). Splits the raw string "SELECT name, age ..."
    into discrete TOKENS: keywords (SELECT, FROM), identifiers (name, users),
    operators (>), literals (25), punctuation (,). Each token is a labelled
    slip of paper. No meaning yet - just classified words.

  * DESK 2 - PARSER (the grammarian). Reads the token slips left to right and
    checks them against the SQL GRAMMAR (a set of rules: "a SELECT statement is
    SELECT <list> FROM <tables> [WHERE <expr>] ..."). Output: an AST - a TREE
    of typed nodes (SelectStmt / Column / BinaryOp / ...) that captures the
    *structure* of the query. A comma in the SELECT list becomes sibling nodes,
    not a comma token.

  * DESK 3 - PLANNER (the reorganizer). The AST mirrors the *syntax* (what the
    user typed). The LOGICAL PLAN reorganizes it into a *data-flow tree* with
    inputs at the leaves and the final result at the root. The plan applies the
    relational order: FROM/JOIN (source rows) -> WHERE (filter) -> GROUP BY
    (aggregate) -> HAVING (filter groups) -> SELECT (project columns) ->
    ORDER BY (sort) -> LIMIT (cap). Each stage becomes a plan node wrapped
    around the previous one.

WHY THE PLAN IS A TREE AND NOT A LIST:
    Every node has INPUTS (children) and produces an OUTPUT relation. A Filter
    takes rows in, keeps the ones matching its predicate, emits the rest. So a
    Filter sits ON TOP OF its input source. Nesting the stages inside-out
    (FROM at the leaf, LIMIT at the root) is what makes it a tree - and lets the
    optimizer later rewrite/swap subtrees (e.g. push the Filter below the Join).

LOGICAL vs PHYSICAL (Section D):
    The LOGICAL plan says WHAT to compute ("join users and orders on user_id").
    The PHYSICAL plan says HOW ("hash join" vs "nested loop"). One logical node
    may map to several physical operators; the cost-based optimizer picks one.

============================================================================
PLAIN-ENGLISH GLOSSARY (referred to throughout)
============================================================================
   token       : a labelled slip from the lexer. Has a TYPE (KEYWORD, IDENT,
                 NUMBER, STRING, OP, PUNCT) and a VALUE (the raw text).
   lexeme      : the raw substring a token came from (e.g. "SELECT", "25").
   keyword     : a reserved word the grammar treats specially (SELECT, FROM,
                 WHERE, JOIN, ON, AND, OR, GROUP, BY, ORDER, LIMIT, IN, ...).
                 Matched case-INSENSITIVELY; normalized to UPPER for output.
   identifier  : a user-defined name (table or column). NOT a keyword.
                 Preserved case-sensitively (we do not fold to lower).
   literal     : a concrete value token: NUMBER (25, 3.14) or STRING ('alice').
   operator    : = != <> < > <= >= + - * /. Used inside expressions.
   grammar     : the set of recursive rules defining valid SQL. Enforced by the
                 parser; a rule violation is a SYNTAX ERROR.
   AST         : Abstract Syntax Tree. The structural, in-memory form of the
                 query once tokens pass the grammar. Typed node objects.
   AST node    : an object like SelectStmt, Column, BinaryOp. Holds children
                 (sub-expressions / clauses), not raw tokens.
   logical plan: the data-flow tree the PLANNER builds from the AST. Leaves are
                 SCANS; root is the final operator (LIMIT/SORT/PROJECT).
   plan node   : LogicalScan, LogicalFilter, LogicalJoin, LogicalAggregate,
                 LogicalSort, LogicalProject, LogicalLimit, SubqueryScan.
   operator    : a plan node is often called an "operator" in query-planning
   (plan)       literature (distinct from the expression "operator" like '>').
   correlation : a subquery that references a column from the OUTER query. The
                 planner cannot run it once - it must be re-evaluated per outer
                 row (or DECORRELATED into a join). Section E.
   round-trip  : serialize(AST) -> SQL' , tokenize(SQL') == tokenize(SQL).
                 Proves the AST captured the query losslessly. Gold-check (F).

============================================================================
THE LINEAGE (sources)
============================================================================
   SQL-92 / SQL:1999    ANSI X3.135-1992 introduced the standard grammar;
                       SQL:1999 added CTEs, recursive queries, window functions.
   recursive descent   Wirth 1976 "Algorithms + Data Structures = Programs":
                       one function per grammar rule, top-down, no backtracking
                       for LL(1) fragments. What we implement here.
   PostgreSQL parser   src/backend/parser/ (flex/bison, gram.y + scan.l):
                       the production-grade version of this pipeline.grammer
                       -> raw parse tree -> analyze.c -> query tree.
   System R (1979)     Selinger et al. introduced separating the LOGICAL plan
                       (relational algebra) from the PHYSICAL plan (access
                       paths + join algorithms). The split in Section D.
   Volcano/Cascades    Graefe 1993/1995: the optimizer as tree rewriting over
                 the logical plan; this is how "Filter pushed below Join" works.

KEY INVARIANTS (all asserted in code):
   tokenize(sql)            -> [Token,...]                       (deterministic)
   parse(tokens)            -> AST                               (lossless)
   serialize(AST)           -> sql'                              (canonical)
   plan(AST)                -> PlanTree                          (relational order)
   tokenize(serialize(parse(tokenize(sql)))) == tokenize(sql)   (ROUND-TRIP, §F)

Relational algebra the planner embodies (order matters - this is the tree nest):
   FROM/JOIN  -> base relation(s)            (leaves: Scan, Join)
   WHERE      -> selection  sigma            (Filter)
   GROUP BY   -> aggregation gamma           (Aggregate)
   HAVING     -> selection on groups         (Filter)
   SELECT     -> projection  pi              (Project)
   ORDER BY   -> sort                        (Sort)
   LIMIT      -> cap                         (Limit)
"""

from __future__ import annotations

BANNER = "=" * 72

# ============================================================================
# 1. THE LEXER  (Desk 1: SQL text -> tokens)
#    One deterministic scan left-to-right. Emits typed Token slips.
# ============================================================================

# Reserved words. Matched case-insensitively, normalized to UPPER on output.
# Keep the set small - just what the supported SELECT dialect needs.
KEYWORDS = {
    "SELECT", "DISTINCT", "FROM", "WHERE", "GROUP", "BY", "HAVING",
    "ORDER", "LIMIT", "JOIN", "INNER", "LEFT", "RIGHT", "FULL", "OUTER",
    "ON", "AND", "OR", "NOT", "IN", "IS", "NULL", "AS", "ASC", "DESC",
    "OFFSET", "UNION", "ALL", "EXISTS", "BETWEEN", "LIKE",
}

# Two-character operators must be matched BEFORE their one-char prefixes.
_TWO_CHAR_OPS = ("!=", "<>", "<=", ">=", "||")
_ONE_CHAR_OPS = set("=<>+-*/%")
_PUNCT = {",": "COMMA", "(": "LPAREN", ")": "RPAREN", ".": "DOT", ";": "SEMI"}


class Token:
    """A labelled slip from the lexer.

    type: one of KEYWORD, IDENT, NUMBER, STRING, OP, PUNCT
    value: the canonical lexeme (keywords upper-cased; everything else verbatim)
    pos: character offset in the source (for error messages)
    """

    __slots__ = ("type", "value", "pos")

    def __init__(self, type_: str, value: str, pos: int):
        self.type = type_
        self.value = value
        self.pos = pos

    def __repr__(self):
        return f"Token({self.type}, {self.value!r})"

    def __eq__(self, other):
        # Two tokens are equal iff type AND value match. Lets us compare token
        # streams directly for the round-trip gold check.
        return isinstance(other, Token) and self.type == other.type and self.value == other.value

    def __hash__(self):
        return hash((self.type, self.value))


def tokenize(sql: str) -> list[Token]:
    """Split a SQL string into a Token list. Deterministic, no external state.

    Skips whitespace and SQL line comments (-- ...). Does NOT strip the
    trailing semicolon - it becomes a SEMI punct token, like any other.
    """
    tokens: list[Token] = []
    i, n = 0, len(sql)
    while i < n:
        c = sql[i]
        # whitespace
        if c.isspace():
            i += 1
            continue
        # line comment  -- ... \n
        if c == "-" and i + 1 < n and sql[i + 1] == "-":
            while i < n and sql[i] != "\n":
                i += 1
            continue
        # string literal  '...'
        if c == "'":
            j = i + 1
            buf = []
            while j < n:
                if sql[j] == "'":
                    # '' is an escaped single quote inside the string
                    if j + 1 < n and sql[j + 1] == "'":
                        buf.append("'")
                        j += 2
                        continue
                    break
                buf.append(sql[j])
                j += 1
            if j >= n:
                raise SyntaxError(f"unterminated string at pos {i}")
            tokens.append(Token("STRING", "".join(buf), i))
            i = j + 1
            continue
        # number  [0-9]+(.[0-9]+)?
        if c.isdigit() or (c == "." and i + 1 < n and sql[i + 1].isdigit()):
            j = i
            seen_dot = False
            while j < n and (sql[j].isdigit() or (sql[j] == "." and not seen_dot)):
                if sql[j] == ".":
                    seen_dot = True
                j += 1
            tokens.append(Token("NUMBER", sql[i:j], i))
            i = j
            continue
        # identifier / keyword  [A-Za-z_][A-Za-z0-9_]*
        if c.isalpha() or c == "_":
            j = i
            while j < n and (sql[j].isalnum() or sql[j] == "_"):
                j += 1
            word = sql[i:j]
            up = word.upper()
            if up in KEYWORDS:
                tokens.append(Token("KEYWORD", up, i))   # normalize to UPPER
            else:
                tokens.append(Token("IDENT", word, i))   # preserve case
            i = j
            continue
        # two-char operators
        two = sql[i:i + 2]
        if two in _TWO_CHAR_OPS:
            tokens.append(Token("OP", two, i))
            i += 2
            continue
        # one-char operators
        if c in _ONE_CHAR_OPS:
            tokens.append(Token("OP", c, i))
            i += 1
            continue
        # punctuation
        if c in _PUNCT:
            tokens.append(Token("PUNCT", c, i))
            i += 1
            continue
        raise SyntaxError(f"unexpected char {c!r} at pos {i}")
    return tokens


# ============================================================================
# 2. THE AST  (Desk 2 output: typed node tree)
#    Plain data classes. Each node knows how to pretty-print itself so we can
#    show the tree and serialize it back to SQL for the round-trip check.
# ============================================================================


class Node:
    """Base AST node."""

    def children(self) -> list["Node"]:
        return []


class Column(Node):
    """A column reference, possibly qualified by a table name: users.name."""

    def __init__(self, name: str, table: str | None = None):
        self.name = name
        self.table = table

    def __repr__(self):
        return f"Column({self.qual()})"

    def qual(self):
        return f"{self.table}.{self.name}" if self.table else self.name

    def to_sql(self):
        return self.qual()


class Star(Node):
    """SELECT *  (optionally table-qualified: users.*)"""

    def __init__(self, table: str | None = None):
        self.table = table

    def __repr__(self):
        return "Star(*)" if not self.table else f"Star({self.table}.*)"

    def to_sql(self):
        return f"{self.table}.*" if self.table else "*"


class Literal(Node):
    """A concrete value: NUMBER or STRING."""

    def __init__(self, value: str, kind: str):
        self.value = value          # keep the raw lexeme ("25", "'alice'")
        self.kind = kind            # "NUMBER" or "STRING"

    def __repr__(self):
        return f"Literal({self.kind}:{self.value})"

    def to_sql(self):
        if self.kind == "STRING":
            return "'" + self.value.replace("'", "''") + "'"
        return self.value


class BinaryOp(Node):
    """op(left, right). op is one of = != <> < > <= >= + - * / % AND OR."""

    def __init__(self, op: str, left: Node, right: Node):
        self.op = op
        self.left = left
        self.right = right

    def __repr__(self):
        return f"BinaryOp({self.op})"

    def children(self):
        return [self.left, self.right]

    def to_sql(self):
        # precedence-aware: delegate to the central serializer so nested ops
        # get parenthesized ONLY when required for an unambiguous round-trip.
        return _expr_sql(self, 0)


class UnaryOp(Node):
    """NOT expr  or  unary minus."""

    def __init__(self, op: str, operand: Node):
        self.op = op
        self.operand = operand

    def __repr__(self):
        return f"UnaryOp({self.op})"

    def children(self):
        return [self.operand]

    def to_sql(self):
        return _expr_sql(self, 0)


class FunctionCall(Node):
    """fn(args...) e.g. COUNT(*), LOWER(name)."""

    def __init__(self, name: str, args: list[Node]):
        self.name = name.upper()
        self.args = args

    def __repr__(self):
        return f"FunctionCall({self.name}/{len(self.args)})"

    def children(self):
        return list(self.args)

    def to_sql(self):
        return f"{self.name}(" + ", ".join(a.to_sql() for a in self.args) + ")"


class InExpr(Node):
    """expr IN (subquery)  or  expr IN (val1, val2, ...)."""

    def __init__(self, expr: Node, subquery: "SelectStmt" | None,
                 values: list[Node] | None, negated: bool = False):
        self.expr = expr
        self.subquery = subquery
        self.values = values
        self.negated = negated

    def __repr__(self):
        kind = "subquery" if self.subquery else "list"
        return f"InExpr({'NOT ' if self.negated else ''}{kind})"

    def children(self):
        out = [self.expr]
        if self.subquery is not None:
            out.append(self.subquery)
        if self.values:
            out.extend(self.values)
        return out

    def to_sql(self):
        return _expr_sql(self, 0)


class TableRef(Node):
    """A table in the FROM list: name + optional alias (AS alias / bare alias)."""

    def __init__(self, name: str, alias: str | None = None):
        self.name = name
        self.alias = alias

    def __repr__(self):
        return f"TableRef({self.name}{(' AS ' + self.alias) if self.alias else ''})"

    def to_sql(self):
        return self.name + (f" AS {self.alias}" if self.alias else "")


class Join(Node):
    """A join clause: left JOIN right ON condition."""

    def __init__(self, left: Node, right: Node, join_type: str, condition: Node):
        self.left = left
        self.right = right
        self.join_type = join_type      # INNER / LEFT / RIGHT / FULL / CROSS
        self.condition = condition

    def __repr__(self):
        return f"Join({self.join_type})"

    def children(self):
        return [self.left, self.right, self.condition]

    def to_sql(self):
        jt = "JOIN" if self.join_type == "INNER" else f"{self.join_type} JOIN"
        return f"{self.left.to_sql()} {jt} {self.right.to_sql()} ON {self.condition.to_sql()}"


class SelectItem(Node):
    """One element of the SELECT list: expr plus optional alias."""

    def __init__(self, expr: Node, alias: str | None = None):
        self.expr = expr
        self.alias = alias

    def __repr__(self):
        return f"SelectItem({self.expr}{(' AS ' + self.alias) if self.alias else ''})"

    def children(self):
        return [self.expr]

    def to_sql(self):
        return self.expr.to_sql() + (f" AS {self.alias}" if self.alias else "")


class OrderItem(Node):
    """One element of ORDER BY: expr + direction (ASC/DESC)."""

    def __init__(self, expr: Node, direction: str):
        self.expr = expr
        self.direction = direction      # "ASC" or "DESC"

    def __repr__(self):
        return f"OrderItem({self.direction})"

    def children(self):
        return [self.expr]

    def to_sql(self):
        return f"{self.expr.to_sql()} {self.direction}"


class SelectStmt(Node):
    """The root AST node for a SELECT statement."""

    def __init__(self):
        self.distinct = False
        self.targets: list[SelectItem] = []
        self.from_clause: Node | None = None     # TableRef, Join, or comma-list
        self.where: Node | None = None
        self.group_by: list[Node] = []
        self.having: Node | None = None
        self.order_by: list[OrderItem] = []
        self.limit: int | None = None

    def __repr__(self):
        return "SelectStmt"

    def children(self):
        c: list[Node] = []
        c.extend(self.targets)
        if self.from_clause is not None:
            c.append(self.from_clause)
        if self.where is not None:
            c.append(self.where)
        c.extend(self.group_by)
        if self.having is not None:
            c.append(self.having)
        c.extend(self.order_by)
        return c

    def to_sql(self):
        """Canonical re-serialization. Drives the round-trip gold check (§F).

        Keyword order is fixed (SELECT...FROM...WHERE...GROUP BY...HAVING...
        ORDER BY...LIMIT) regardless of how the user laid out the original SQL.
        """
        parts = ["SELECT"]
        if self.distinct:
            parts.append("DISTINCT")
        parts.append(", ".join(t.to_sql() for t in self.targets))
        if self.from_clause is not None:
            parts.append("FROM")
            parts.append(self.from_clause.to_sql())
        if self.where is not None:
            parts.append("WHERE")
            parts.append(self.where.to_sql())
        if self.group_by:
            parts.append("GROUP BY")
            parts.append(", ".join(g.to_sql() for g in self.group_by))
        if self.having is not None:
            parts.append("HAVING")
            parts.append(self.having.to_sql())
        if self.order_by:
            parts.append("ORDER BY")
            parts.append(", ".join(o.to_sql() for o in self.order_by))
        if self.limit is not None:
            parts.append("LIMIT")
            parts.append(str(self.limit))
        return " ".join(parts)


# ============================================================================
# 2b. PRECEDENCE-AWARE SERIALIZER  (drives the round-trip gold check)
#     Emits the MINIMAL parenthesization that re-parses to the same AST.
# ============================================================================

# Operator precedence, low (= binds loosest) to high. Matches the parser's
# precedence-climbing order, so serialize(parse(serialize(x))) == serialize(x).
_PREC = {
    "OR": 1, "AND": 2,
    "=": 3, "!=": 3, "<>": 3, "<": 3, ">": 3, "<=": 3, ">=": 3,
    "+": 4, "-": 4,
    "*": 5, "/": 5, "%": 5,
}
_NOT_PREC = 2      # NOT sits between AND(2) and comparison(3)
_IN_PREC = 3       # IN binds like a comparison


def _prec_of(node: Node) -> float:
    if isinstance(node, BinaryOp):
        return _PREC[node.op]
    if isinstance(node, InExpr):
        return _IN_PREC
    if isinstance(node, UnaryOp):
        return _NOT_PREC
    return 99           # atoms (Column, Literal, FunctionCall, ...) never bind


def _expr_sql(node: Node, min_prec: float) -> str:
    """Serialize `node`, parenthesizing iff its precedence < min_prec.

    Left-associative: the right operand must bind TIGHTER than the operator
    (min_prec+1), the left operand binds at the operator's own precedence.
    """
    if isinstance(node, BinaryOp):
        my = _PREC[node.op]
        left = _expr_sql(node.left, my)
        right = _expr_sql(node.right, my + 1)
        s = f"{left} {node.op} {right}"
        return f"({s})" if my < min_prec else s
    if isinstance(node, UnaryOp):
        s = f"{node.op} {_expr_sql(node.operand, _NOT_PREC)}"
        return f"({s})" if _NOT_PREC < min_prec else s
    if isinstance(node, InExpr):
        head = "NOT IN " if node.negated else "IN "
        if node.subquery is not None:
            body = f"{_expr_sql(node.expr, _IN_PREC)} {head}({node.subquery.to_sql()})"
        else:
            inner = ", ".join(v.to_sql() for v in node.values or [])
            body = f"{_expr_sql(node.expr, _IN_PREC)} {head}({inner})"
        return f"({body})" if _IN_PREC < min_prec else body
    # atoms (Column, Literal, FunctionCall, Star, ...)
    return node.to_sql()


# ============================================================================
# 3. THE PARSER  (Desk 2: tokens -> AST via recursive descent)
#    One method per grammar rule. Top-down, LL(1) on the fragments we support.
# ============================================================================


class Parser:
    """Recursive-descent parser. Holds the token list and a cursor.

    Usage:  ast = Parser(tokenize(sql)).parse_select()
    Raises SyntaxError on any grammar violation, with the offending token.
    """

    def __init__(self, tokens: list[Token]):
        # drop a trailing SEMI so "SELECT ...;" parses cleanly
        self.toks = [t for t in tokens if not (t.type == "PUNCT" and t.value == ";")]
        self.i = 0

    # ---- token cursor helpers ----
    def peek(self) -> Token | None:
        return self.toks[self.i] if self.i < len(self.toks) else None

    def at_end(self) -> bool:
        return self.i >= len(self.toks)

    def advance(self) -> Token:
        t = self.toks[self.i]
        self.i += 1
        return t

    def expect_punct(self, value: str) -> Token:
        t = self.peek()
        if t is None or t.type != "PUNCT" or t.value != value:
            raise SyntaxError(f"expected {value!r}, got {t}")
        return self.advance()

    def match_kw(self, *kws: str) -> bool:
        t = self.peek()
        return t is not None and t.type == "KEYWORD" and t.value in kws

    def consume_kw(self, kw: str) -> Token:
        t = self.peek()
        if t is None or t.type != "KEYWORD" or t.value != kw:
            raise SyntaxError(f"expected keyword {kw}, got {t}")
        return self.advance()

    # ---- grammar entry point ----
    def parse_select(self, is_subquery: bool = False) -> SelectStmt:
        # When is_subquery=True we are parsing within parentheses (an IN list /
        # scalar subquery), so a trailing RPAREN is the expected terminator and
        # NOT a syntax error - the caller consumes it.
        stmt = SelectStmt()
        self.consume_kw("SELECT")
        if self.match_kw("DISTINCT"):
            self.advance()
            stmt.distinct = True
        stmt.targets = self.parse_select_list()
        if self.match_kw("FROM"):
            self.advance()
            stmt.from_clause = self.parse_from_clause()
        if self.match_kw("WHERE"):
            self.advance()
            stmt.where = self.parse_expr()
        if self.match_kw("GROUP"):
            self.advance()
            self.consume_kw("BY")
            stmt.group_by = self.parse_expr_list()
        if self.match_kw("HAVING"):
            self.advance()
            stmt.having = self.parse_expr()
        if self.match_kw("ORDER"):
            self.advance()
            self.consume_kw("BY")
            stmt.order_by = self.parse_order_list()
        if self.match_kw("LIMIT"):
            self.advance()
            num = self.advance()
            if num.type != "NUMBER":
                raise SyntaxError(f"LIMIT expects a number, got {num}")
            stmt.limit = int(num.value)
        if not self.at_end():
            t = self.peek()
            if not (is_subquery and t is not None and t.type == "PUNCT" and t.value == ")"):
                raise SyntaxError(f"unexpected trailing token: {t}")
        return stmt

    # ---- SELECT list ----
    def parse_select_list(self) -> list[SelectItem]:
        items = [self.parse_select_item()]
        while self.peek() is not None and self.peek().type == "PUNCT" and self.peek().value == ",":
            self.advance()
            items.append(self.parse_select_item())
        return items

    def parse_select_item(self) -> SelectItem:
        # bare *  or  table.*
        t = self.peek()
        if t is not None and t.type == "OP" and t.value == "*":
            self.advance()
            return SelectItem(Star())
        if (t is not None and t.type == "IDENT"
                and self.i + 2 < len(self.toks)
                and self.toks[self.i + 1].type == "PUNCT"
                and self.toks[self.i + 1].value == "."
                and self.toks[self.i + 2].type == "OP"
                and self.toks[self.i + 2].value == "*"):
            tbl = self.advance().value
            self.advance()  # dot
            self.advance()  # star
            return SelectItem(Star(tbl))
        expr = self.parse_expr()
        alias = None
        if self.match_kw("AS"):
            self.advance()
            alias = self.advance().value
        elif self.peek() is not None and self.peek().type == "IDENT":
            # bare alias:  expr alias  (no AS)
            alias = self.advance().value
        return SelectItem(expr, alias)
